force-app/main/default/objects/SMS_Notification_Handler__c/SMS_Notification_Handler__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SMS Notification Handler</label>
</CustomObject>