force-app/main/default/objects/SMS_Notification_Handler__c/fields/Account_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Name Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>