force-app/main/default/objects/SMS_Notification_Handler__c/fields/Accout_ID_Field__c.field-meta.xml
<CustomField>
    <fullName>Accout_ID_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accout ID Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>