force-app/main/default/objects/SMS_Notification_Handler__c/fields/force__c.field-meta.xml
<CustomField>
    <fullName>force__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>force</label>
    <length>5</length>
    <type>Text</type>
</CustomField>