force-app/main/default/objects/SMS_Notification_Handler__c/fields/search__c.field-meta.xml
<CustomField>
    <fullName>search__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>search</label>
    <length>5</length>
    <type>Text</type>
</CustomField>