force-app/main/default/objects/SMS_Notification_Handler__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>