force-app/main/default/objects/SMS_Notification_Handler__c/fields/SMS_Fee_Charging_3__c.field-meta.xml
<CustomField>
    <fullName>SMS_Fee_Charging_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS Fee Charging 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>