force-app/main/default/objects/SMS_Notification_Handler__c/fields/SMS_Template_Id_2__c.field-meta.xml
<CustomField>
    <fullName>SMS_Template_Id_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS Template Id 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>