force-app/main/default/objects/SMS_Notification_Handler__c/fields/Sponsor_Class_Field__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Class_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sponsor Class Field</label>
    <length>20</length>
    <type>Text</type>
</CustomField>